[package]
name = "forrest"
version = "0.1.0"
authors = ["Leonard Göhrs"]
edition = "2021"
description = "Run GitHub self-hosted runners in qemu VMs"
homepage = "https://github.com/hnez/forrest"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
fatfs = "0.3"
hex = "0.4"
hmac = "0.13"
http-body-util = "0.1"
jsonwebtoken = "10.4"
log = "0.4"
octocrab = "0.53"
pretty_env_logger = "0.5"
rand = "0.10"
reflink-copy = "0.1"
sd-notify = "0.5"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.11"
yaml_serde = "0.10"

[dependencies.hyper]
version = "1.10"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1"
features = ["tokio"]

[dependencies.tokio]
version = "1.52"
features = ["fs", "io-util", "macros", "process", "rt"]
